[hmm] notebook update

--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -286,6 +286,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "And evaluate the likelihood of the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmm_est_random.likelihood"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As well as compute the likelihood of the generated data given our original model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ground_truth.compute_observation_likelihood(observation_trajectory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bayesian sampling\n",
     "\n",
     "Bayesian sampling of HMMs can be used to obtain confidences. In particular, Gibbs sampling can be performed around a reference HMM, as introduced in <cite data-cite=\"nbhmm-chodera2011bayesian\">(Chodera, 2011)</cite>. In deeptime, a [BayesianHMM](../api/generated/deeptime.markov.hmm.BayesianHMM.rst#deeptime.markov.hmm.BayesianHMM) estimator is provided.\n",
