--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -628,3 +628,12 @@
   year={1999},
   publisher={Elsevier}
 }
+@article{klus2020data,
+  title={Data-driven approximation of the Koopman generator: Model reduction, system identification, and control},
+  author={Klus, Stefan and N{\"u}ske, Feliks and Peitz, Sebastian and Niemann, Jan-Hendrik and Clementi, Cecilia and Sch{\"u}tte, Christof},
+  journal={Physica D: Nonlinear Phenomena},
+  volume={406},
+  pages={132416},
+  year={2020},
+  publisher={Elsevier}
+}
