--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -637,3 +637,9 @@
   year={2020},
   publisher={Elsevier}
 }
+@article{tian2020kernel,
+  title={Kernel Embedding based Variational Approach for Low-dimensional Approximation of Dynamical Systems},
+  author={Tian, Wenchong and Wu, Hao},
+  journal={arXiv preprint arXiv:2008.02962},
+  year={2020}
+}
