Small fixes part 2 - fix tests

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -643,3 +643,13 @@
   journal={arXiv preprint arXiv:2008.02962},
   year={2020}
 }
+@article{wu2016multiensemble,
+  title={Multiensemble Markov models of molecular thermodynamics and kinetics},
+  author={Wu, Hao and Paul, Fabian and Wehmeyer, Christoph and No{\'e}, Frank},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={23},
+  pages={E3221--E3230},
+  year={2016},
+  publisher={National Acad Sciences}
+}
