Minor documentation fixes for TRAM

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -653,3 +653,23 @@
   year={2016},
   publisher={National Acad Sciences}
 }
+@article{hukushima1996exchange,
+  title={Exchange Monte Carlo method and application to spin glass simulations},
+  author={Hukushima, Koji and Nemoto, Koji},
+  journal={Journal of the Physical Society of Japan},
+  volume={65},
+  number={6},
+  pages={1604--1608},
+  year={1996},
+  publisher={The Physical Society of Japan}
+}
+@article{shirts2008statistically,
+  title={Statistically optimal analysis of samples from multiple equilibrium states},
+  author={Shirts, Michael R and Chodera, John D},
+  journal={The Journal of chemical physics},
+  volume={129},
+  number={12},
+  pages={124105},
+  year={2008},
+  publisher={American Institute of Physics}
+}
