--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -673,3 +673,11 @@
   year={2008},
   publisher={American Institute of Physics}
 }
+@article{chartrand2011numerical,
+  title={Numerical differentiation of noisy, nonsmooth data},
+  author={Chartrand, Rick},
+  journal={International Scholarly Research Notices},
+  volume={2011},
+  year={2011},
+  publisher={Hindawi}
+}
