Add Lorenz system. (#261)

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -681,3 +681,12 @@
   year={2011},
   publisher={Hindawi}
 }
+@article{lorenz1963deterministic,
+  title={Deterministic nonperiodic flow},
+  author={Lorenz, Edward N},
+  journal={Journal of atmospheric sciences},
+  volume={20},
+  number={2},
+  pages={130--141},
+  year={1963}
+}
