Add Thomas attractor. (#261)

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -690,3 +690,13 @@
   pages={130--141},
   year={1963}
 }
+@article{thomas1999deterministic,
+  title={Deterministic chaos seen in terms of feedback circuits: Analysis, synthesis," labyrinth chaos"},
+  author={Thomas, Ren{\'e}},
+  journal={International Journal of Bifurcation and Chaos},
+  volume={9},
+  number={10},
+  pages={1889--1905},
+  year={1999},
+  publisher={World Scientific}
+}
