added input tests for the Girsanov reweighted transition counting and added references

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -700,3 +700,19 @@
   year={1999},
   publisher={World Scientific}
 }
+@article{donati2017girsanov,
+  title={Girsanov reweighting for path ensembles and Markov state models},
+  author={Donati, Lorenzo and Hartmann, Carsten and Keller, Bettina G},
+  journal={The Journal of chemical physics},
+  volume={146},
+  number={24},
+  year={2017},
+  publisher={AIP Publishing}
+}
+@article{schaefer2024implementation,
+    title={Implementation of Girsanov Reweighting in OpenMM and Deeptime},
+    author={Schaefer, Joana-Lysiane and Keller, Bettina G},
+  journal={The Journal of Physical Chemistry B},
+  year={2024},
+  publisher={ACS Publications}
+}
